fix: explicitly add react-app-polyfill to package.json

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "core-js": "^2.5.7",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
+    "react-app-polyfill": "^1.0.4",
     "react-is": "^16.9.0",
     "shortid": "^2.2.14"
   },
