rename packages and change version to 2.0.0-alpha.1

--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rjsf-jasonritchie/material-ui",
-  "version": "2.0.0-alpha.2",
+  "name": "@rjsf/material-ui",
+  "version": "2.0.0-alpha.1",
   "main": "dist/index.js",
   "module": "dist/rjsf-material-ui.esm.js",
   "typings": "dist/index.d.ts",
