--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rjsf-jasonritchie/core",
-  "version": "2.0.0-alpha.2",
+  "name": "@rjsf/core",
+  "version": "2.0.0-alpha.1",
   "description": "A simple React component capable of building HTML forms out of a JSON schema.",
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
