--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.7",
     "date-fns": "^1.30.1",
+    "lodash": "^4.17.15",
     "lodash.topath": "^4.5.2",
     "moment": "^2.24.0",
     "prop-types": "^15.5.8",
