Add allOf support (#1380)
* feat: add allOf support

* use patch version of json-schema-merge-allof

* fix: publicPath for netlify builds

* fix typo

* fix: pass around shouldMergeAllOf a bit

* fix: remove shouldMergeAllOf

* fix: resolve allOf when calculating idSchema and pathSchema

* Revert "Fix dependency defaults for uncontrolled components (#1371)"

This reverts commit 6728977b0085ef37c310b4d40d076a2622664ba7.

* Revert "Revert "Fix dependency defaults for uncontrolled components (#1371)""

This reverts commit ad2bd6841b9218622a2a4bc92a07f4e8b88ce636.

* test: start writing some basic tests

* add doc on allOf

* add allOf playground sample

* handle merging errors by removing allOf

* add test for nested allOf's

* clarify that allOf keyword is dropped

* don't use merge allof fork

* remove change to package-lock.json

* prettier format

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
     "@babel/runtime-corejs2": "^7.4.5",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
+    "json-schema-merge-allof": "^0.6.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
