--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,13 +1,20 @@
 {
   "name": "@rjsf/playground",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.0",
   "description": "rjsf playground",
   "scripts": {
-    "build": "rimraf build && cross-env NODE_ENV=production webpack --config webpack.config.prod.js && cp src/index.prod.html build/index.html",
+    "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
+    "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
+    "build:playground": "rimraf build && cross-env NODE_ENV=production webpack --config webpack.config.prod.js && cp playground/index.prod.html build/index.html",
     "cs-check": "prettier -l \"{playground,src,test}/**/*.js\"",
     "cs-format": "prettier \"{playground,src,test}/**/*.js\" --write",
+    "dist": "npm run build:lib && npm run build:dist",
+    "lint": "eslint src test playground",
+    "prepare": "npm run dist",
     "precommit": "lint-staged",
-    "publish": "npm run build:playground && gh-pages --dist build/",
+    "publish-to-gh-pages": "npm run build:playground && gh-pages --dist build/",
+    "publish-to-npm": "npm run dist && npm publish",
+    "preversion": "npm run build:playground && npm run dist && npm run cs-check && npm run lint",
     "start": "node devServer.js"
   },
   "lint-staged": {
@@ -39,6 +46,8 @@
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
     "react-is": "^16.9.0",
+    "react-jsonschema-form": "^2.0.0-alpha.1",
+    "rjsf-material-ui": "^0.3.9",
     "shortid": "^2.2.14"
   },
   "devDependencies": {
@@ -51,6 +60,8 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
