--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
+    "react-bootstrap": "^0.33.1",
     "react-is": "^16.9.0",
     "react-jsonschema-form": "^2.0.0-alpha.1",
     "rjsf-material-ui": "^0.3.9",
@@ -100,6 +101,8 @@
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
+    "sass": "^1.23.7",
+    "sass-loader": "^7.3.1",
     "sinon": "^7.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^4.20.2",
