--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -46,6 +46,7 @@
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^0.33.1",
+    "react-frame-component": "^4.1.1",
     "react-is": "^16.9.0",
     "react-jsonschema-form": "^2.0.0-alpha.1",
     "rjsf-material-ui": "^0.3.9",
@@ -83,6 +84,7 @@
     "express": "^4.14.0",
     "gh-pages": "^0.11.0",
     "html": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.13.2",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
