--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -42,6 +42,7 @@
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
     "json-schema-merge-allof": "^0.6.0",
+    "jss": "^10.0.3",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
@@ -63,7 +64,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "@material-ui/core": "^4.7.2",
+    "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
