--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -29,8 +29,8 @@
     "precommit": "lint-staged"
   },
   "peerDependencies": {
-    "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "^0.83.0",
+    "semantic-ui-react": "^0.87.3",
+    "semantic-ui-css": "^2.4.1",
     "lodash": "^4.17.15",
     "shortid": "^2.2.14",
     "react": ">=16",
