fixed formdata issue

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,8 @@
   "main": "lib/index.js",
   "files": [
     "dist",
-    "lib"
+		"lib",
+		"src"
   ],
   "engineStrict": false,
   "engines": {
