--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
-    "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
+    "build:dist": "rimraf dist && cross-env NODE_ENV=production",
     "dist": "npm run build:lib && npm run build:dist",
     "lint": "eslint src test",
     "prepare": "npm run dist",
@@ -61,7 +61,39 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jsonschema-form": "^1.6.1",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "atob": "^2.0.3",
+    "codemirror": "^5.30.0",
+    "create-react-ref": "^0.1.0",
+    "cross-env": "^2.0.1",
+    "css-loader": "^0.23.1",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
+    "express": "^4.14.0",
+    "gh-pages": "^0.11.0",
+    "html": "^1.0.0",
+    "husky": "^0.13.2",
+    "jsdom": "^8.3.0",
+    "json-loader": "^0.5.7",
+    "lint-staged": "^9.4.2",
+    "loader-utils": "^1.2.3",
+    "mini-css-extract-plugin": "^0.4.3",
+    "mocha": "^5.2.0",
+    "monaco-editor-webpack-plugin": "^1.7.0",
+    "nyc": "^13.2.0",
+    "prettier": "^1.15.1",
+    "react-codemirror2": "^4.1.0",
+    "react-monaco-editor": "^0.26.2",
+    "react-portal": "^4.2.0",
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.1",
+    "redbox-react": "^1.3.3",
+    "sinon": "^7.5.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.13.2"
   },
   "publishConfig": {
     "access": "public"
