Allow references that don't start with #/definitions/ (#1506)
* pass entire rootSchema to findSchemaDefinition, not just definitions

* use jsonpointer to handle non-"#/definitions" definitions

* revert package-lock

* make sure json pointers are URI fragment encoded

* replace "definitions" with "rootSchema"  variable

* Fix getMatchingOption logic

* fix tests

* remove console log

* Fix tests

* prettier

* Remove support for recursive references to deep schema definitions

* update docs for registry and definitions

* add `definitions` back to registry

* Fix mui form tests

* Add a general registry test

* update proptypes of registry

* fix eslint issues

* fix formatting

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,7 @@
     "@babel/runtime-corejs2": "^7.4.5",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
+    "jsonpointer": "^4.0.1",
     "json-schema-merge-allof": "^0.6.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
