fix playground version

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,8 +42,8 @@
     "@babel/runtime-corejs2": "^7.4.5",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
-    "jsonpointer": "^4.0.1",
     "json-schema-merge-allof": "^0.6.0",
+    "jsonpointer": "^4.0.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
@@ -60,6 +60,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
+    "@rjsf/playground": "^2.0.0-alpha.2.2",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
