--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@rjsf/playground",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-alpha.2.2",
   "description": "rjsf playground",
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
+    "prepublishOnly": "npm run build:lib",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
     "build:playground": "rimraf build && cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "cs-check": "prettier -l \"{playground,src,test}/**/*.js\"",
@@ -43,6 +44,7 @@
     "json-schema-merge-allof": "^0.6.0",
     "jss": "^10.0.3",
     "lodash": "^4.17.15",
+    "@material-ui/core": "^4.9.4",
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^0.33.1",
@@ -63,7 +65,6 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
