Add subthemes, fix blurring for new playground (#1623)
* add option to select subthemes (for bootstrap)

* fix blurring when typing issue by setting FormComponent in the state

* use @rjsf/core instead of react-jsonschema-form package

* fix allOf example

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -39,12 +39,13 @@
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.5",
+    "@material-ui/core": "^4.9.4",
+    "@rjsf/core": "^2.0.0-alpha.2",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
     "json-schema-merge-allof": "^0.6.0",
     "jss": "^10.0.3",
     "lodash": "^4.17.15",
-    "@material-ui/core": "^4.9.4",
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^0.33.1",
