--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -32,6 +32,7 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@rjsf/core": "^2.0.0-alpha.2",
+    "@rjsf/playground": "^2.0.0-alpha.2.2",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.3",
     "@types/react": "^16.8.23",
