--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -40,6 +40,7 @@
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "cross-env": "^2.0.1",
     "css-loader": "^3.2.0",
     "eslint": "^4.9.0",
