--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.5",
     "@material-ui/core": "^4.9.4",
+    "@rjsf/antd": "^2.0.0-alpha.2",
     "@rjsf/core": "^2.0.0-alpha.2",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
