--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -33,17 +33,21 @@
     "@material-ui/icons": "^4.2.1",
     "@rjsf/core": "^2.0.0-alpha.2",
     "@rjsf/playground": "^2.0.0-alpha.2.2",
+    "@types/chai": "^4.2.10",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.3",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-jsonschema-form": "^1.6.2",
+    "@types/sinon": "^7.5.2",
+    "chai": "^4.2.0",
     "np": "^5.0.3",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jsonschema-form": "^1.8.1",
     "rimraf": "^2.6.3",
+    "sinon": "^9.0.0",
     "tsdx": "^0.7.2",
     "tslib": "^1.10.0",
     "typescript": "^3.5.3"
