ci: install npm deps such as lerna

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ jobs:
         versionSpec: $(node_version)
       displayName: 'Install Node.js'
     - script: |
+        npm install
         npm run bootstrap
         npm run test
         npm run lint
