--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = ""
   publish = "packages/playground/build"
-  command = "npm run bootstrap && npm run build && cd packages/playground && npm run publish-to-gh-pages"
+  command = "npm run bootstrap && npm run build && cd packages/playground && npm run build:playground"
 
 [build.environment]
   SHOW_NETLIFY_BADGE = "true"
