--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -6,15 +6,14 @@
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
     "prepublishOnly": "npm run build:lib",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
-    "build:playground": "rimraf build && cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "cs-check": "prettier -l \"{playground,src,test}/**/*.js\"",
     "cs-format": "prettier \"{playground,src,test}/**/*.js\" --write",
-    "build": "npm run build:lib && npm run build:dist",
+    "build": "rimraf build && cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "lint": "eslint src test playground",
     "precommit": "lint-staged",
-    "publish-to-gh-pages": "npm run build:playground && gh-pages --dist build/",
+    "publish-to-gh-pages": "npm run build && gh-pages --dist build/",
     "publish-to-npm": "npm run build && npm publish",
-    "preversion": "npm run build:playground && npm run build && npm run cs-check && npm run lint",
+    "preversion": "npm run build && npm run build && npm run cs-check && npm run lint",
     "start": "webpack-dev-server --open --config webpack.config.dev.js"
   },
   "lint-staged": {
