--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rjsf/core",
+  "name": "react-jsonschema-form",
   "version": "2.0.0-alpha.1",
   "private": true,
   "description": "monorepo for react-jsonschema-form and its themes",
