Playground and development environment fixes for Lerna (#1642)
Building off of work done in #1606 and #1641.

Update build and dev process and documentation (as discussed in #1630 (comment)). The developer will just need to run lerna bootstrap, run npm start from the package they are modifying, then run the playground from packages/playground to get a live-reloading playground.
Fix deploy previews by configuring netlify so that it runs lerna bootstrap, thus linking the packages with the local changes in the PR, before building the playground.
Export typings from @rjsf/core (fixes #1583) -- did this in this PR so that @rjsf/material-ui would work as well.
Fix playground issues in which the material-ui playground did not use the right ObjectFieldTemplate or ArrayFieldTemplate.
Fixes #1630 .

--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -20,7 +20,7 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "react": ">=16",
-    "react-jsonschema-form": "^1.6.1"
+    "@rjsf/core": "^2.0.0-alpha.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
@@ -31,16 +31,15 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "@rjsf/core": "^2.0.0-alpha.2",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.3",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-jsonschema-form": "^1.6.2",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "np": "^5.0.3",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-jsonschema-form": "^1.6.1",
     "rimraf": "^2.6.3",
     "tsdx": "^0.12.3",
     "tslib": "^1.10.0",
