--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,11 @@ jobs:
       displayName: 'Install Node.js'
     - script: |
         npm install
-        npm test
+        npm run bootstrap
+        npm run build
+        npm run test
         npm run lint
         npm run cs-check
-        npm run dist
       displayName: 'npm install and build'
   - job: Docs
     steps:
