--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "packages/playground"
-  publish = "build"
-  command = "npm run build:playground"
+  base = ""
+  publish = "packages/playground/build"
+  command = "npm run bootstrap && npm run build"
 
 [build.environment]
   SHOW_NETLIFY_BADGE = "true"
