--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 9.x, 10.x, 11.x, 12.x]
+        node-version: [8.x, 9.x, 10.x, 11.x, 12.x, 13.x]
 
     steps:
     - uses: actions/checkout@v2
