--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-jsonschema-form",
-  "version": "2.0.0-alpha.1-zs-1",
+  "version": "2.0.0-alpha.1",
   "private": true,
   "description": "monorepo for react-jsonschema-form and its themes",
   "scripts": {
