--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rjsf/playground",
-  "version": "2.0.0-alpha.2.2",
+  "version": "2.0.0",
   "description": "rjsf playground",
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
@@ -39,7 +39,8 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.5",
     "@material-ui/core": "^4.9.4",
-    "@rjsf/core": "^2.0.0-alpha.2",
+    "@rjsf/core": "^2.0.0",
+    "@rjsf/material-ui": "^2.0.0",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
     "json-schema-merge-allof": "^0.6.0",
@@ -50,7 +51,6 @@
     "react-bootstrap": "^0.33.1",
     "react-frame-component": "^4.1.1",
     "react-is": "^16.9.0",
-    "@rjsf/material-ui": "^2.0.0-alpha.2",
     "shortid": "^2.2.14"
   },
   "devDependencies": {
