--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,7 +30,8 @@
   "module": "dist/es/index.js",
   "typings": "index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "lib"
   ],
   "engineStrict": false,
   "engines": {
@@ -41,6 +42,7 @@
     "react": ">=16"
   },
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.8.7",
     "@types/json-schema": "^7.0.4",
     "ajv": "^6.7.0",
     "core-js": "^2.5.7",
@@ -64,7 +66,6 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "@babel/runtime-corejs2": "^7.8.7",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
