--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,10 +28,10 @@
   },
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
-  "typings": "index.d.ts",
   "files": [
     "dist",
-    "lib"
+    "lib",
+    "index.d.ts"
   ],
   "engineStrict": false,
   "engines": {
@@ -129,6 +129,5 @@
   "homepage": "https://github.com/mozilla-services/react-jsonschema-form#readme",
   "publishConfig": {
     "access": "public"
-  },
-  "types": "index.d.ts"
+  }
 }
