--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "rimraf dist && tsdx build",
-    "test": "tsdx test --env=jsdom"
+    "test": "tsdx test"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.2.0",
@@ -34,9 +34,11 @@
     "@types/json-schema": "^7.0.3",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-test-renderer": "^16.9.2",
     "@types/sinon": "^9.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.13.1",
     "rimraf": "^2.6.3",
     "sinon": "^9.0.1",
     "tsdx": "^0.12.3",
