--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,14 +4,25 @@ theme: readthedocs
 
 nav:
   - Introduction: index.md
-  - Advanced Customization: advanced-customization.md
-  - Definitions: definitions.md
-  - Dependencies: dependencies.md
-  - Form Customization: form-customization.md
-  - Theme Customization: theme-customization.md
-  - Validation: validation.md
-  - Contributing: contributing.md
   - Playground: https://rjsf-team.github.io/react-jsonschema-form/
+  - Basics: basics.md
+  - Custom Widgets and Fields: custom-widgets-fields.md
+  - Custom Templates: custom-templates.md
+  - Theme Customization: theme-customization.md
+  - Schema Reference: api-reference-schema.md
+  - uiSchema Reference: api-reference-uischema.md
+  - Widget Reference: api-reference-widgets.md
+  - Form Props Reference: api-reference-props.md
+  - Other Internals: internals.md
+
+  # - Advanced Customization: advanced-customization.md
+  # - Definitions: definitions.md
+  # - Dependencies: dependencies.md
+  # - Form Customization: form-customization.md
+  # - Theme Customization: theme-customization.md
+  # - Validation: validation.md
+  # - Contributing: contributing.md
+  # - Playground: https://rjsf-team.github.io/react-jsonschema-form/
 
 markdown_extensions:
   - toc:
