--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "start": "lerna run start --stream --parallel"
   },
   "dependencies": {
-    "prettier": "^1.18.2",
-    "lerna": "^3.18.3"
+    "lerna": "^3.18.3",
+    "lint-staged": "^10.1.3",
+    "prettier": "^1.18.2"
   },
   "prettier": {
     "jsxBracketSameLine": true,
