--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,12 @@ indent_style = space
 indent_size = 2
 charset = utf-8
 insert_final_newline = true
+
+# We recommend you to keep these unchanged
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
