Fixed a test that failed

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start": "lerna run start --stream --parallel"
   },
   "dependencies": {
-    "prettier": "^1.18.2",
-    "lerna": "^3.18.3"
+    "lerna": "^3.20.2",
+    "prettier": "^1.18.2"
   },
   "prettier": {
     "jsxBracketSameLine": true,
