--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -26,7 +26,8 @@
     "dist": "npm run build:lib && npm run build:dist",
     "lint": "eslint src test",
     "prepare": "npm run dist",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test": "jest"
   },
   "peerDependencies": {
     "semantic-ui-react": "^0.87.3",
@@ -34,7 +35,7 @@
     "lodash": "^4.17.15",
     "shortid": "^2.2.14",
     "react": ">=16",
-    "react-jsonschema-form": "^1.6.1"
+    "@rjsf/core": "^2.0.0-alpha.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -46,33 +47,28 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
+    "@rjsf/core": "^2.0.0-alpha.6",
+    "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "chai": "^3.3.0",
+    "codemirror": "^5.30.0",
+    "create-react-ref": "^0.1.0",
+    "cross-env": "^2.0.1",
+    "css-loader": "^0.23.1",
     "eslint": "^4.9.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
-    "np": "^5.0.3",
-    "npm-run-all": "^4.1.5",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-jsonschema-form": "^1.6.1",
-    "rimraf": "^2.6.3",
-    "atob": "^2.0.3",
-    "codemirror": "^5.30.0",
-    "create-react-ref": "^0.1.0",
-    "cross-env": "^2.0.1",
-    "css-loader": "^0.23.1",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "express": "^4.14.0",
     "gh-pages": "^0.11.0",
     "html": "^1.0.0",
     "husky": "^0.13.2",
+    "jest": "^25.4.0",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^9.4.2",
@@ -80,14 +76,21 @@
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
+    "np": "^5.0.3",
+    "npm-run-all": "^4.1.5",
     "nyc": "^13.2.0",
     "prettier": "^1.15.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-codemirror2": "^4.1.0",
+    "react-dom": "^16.8.6",
     "react-monaco-editor": "^0.26.2",
     "react-portal": "^4.2.0",
+    "react-test-renderer": "^16.13.1",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.3.3",
+    "rimraf": "^2.6.3",
     "sinon": "^7.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^4.20.2",
@@ -120,7 +123,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.9.2",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-react": "^0.87.3"
   }
 }
