--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -93,6 +93,7 @@
     "rimraf": "^2.6.3",
     "sinon": "^7.5.0",
     "style-loader": "^0.13.1",
+    "shortid": "^2.2.14",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
