--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rjsf/material-ui",
-  "version": "2.0.0-alpha.6",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "module": "dist/rjsf-material-ui.esm.js",
   "typings": "dist/index.d.ts",
@@ -16,8 +16,8 @@
   "peerDependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
-    "react": ">=16",
-    "@rjsf/core": "^2.0.0-alpha.6"
+    "@rjsf/core": "^2.0.0-alpha.6",
+    "react": ">=16"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
@@ -29,7 +29,7 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
-    "@rjsf/core": "^2.0.0-alpha.6",
+    "@rjsf/core": "^2.0.0",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.3",
     "@types/react": "^16.9.23",
