Migrate rjsf-antd code to antd v4 support

--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@rjsf/antd",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0-alpha.6",
   "description": "Ant Design theme, fields and widgets for react-jsonschema-form",
   "main": "dist/index.js",
   "module": "dist/rjsf-antd.js",
   "scripts": {
+    "build": "npm run build:dist && npm run build:lib",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
     "clean": "rimraf dist",
+    "lint": "eslint src test",
+    "start": "concurrently \"npm:build:* -- --watch\"",
     "test": "cross-env NODE_ENV=test jest"
   },
   "jest": {
@@ -16,17 +19,18 @@
     }
   },
   "peerDependencies": {
-    "antd": "^3.0.0",
+    "@ant-design/icons": "^4.0.0",
+    "@babel/runtime-corejs2": "^7.4.5",
+    "@rjsf/core": "^2.0.0-alpha.6",
+    "antd-dayjs-webpack-plugin": "1.0.0",
+    "antd": "^4.0.0",
+    "core-js": "^2.5.7",
+    "dayjs": "^1.8.0",
+    "lodash": "^4.17.15",
     "react": ">=16"
   },
-  "dependencies": {
-    "@babel/runtime-corejs2": "^7.4.5",
-    "@rjsf/core": "^2.0.0-alpha.2",
-    "core-js": "^2.5.7",
-    "lodash": "^4.17.15",
-    "prop-types": "^15.7.2"
-  },
   "devDependencies": {
+    "@ant-design/icons": "^4.0.0",
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -36,13 +40,19 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "antd": "^3.23.6",
+    "@babel/runtime-corejs2": "^7.4.5",
+    "@rjsf/core": "^2.0.0-alpha.6",
+    "antd": "^4.0.0",
+    "antd-dayjs-webpack-plugin": "1.0.0",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
+    "concurrently": "^5.1.0",
+    "core-js": "^2.5.7",
     "cross-env": "^2.0.1",
     "css-loader": "^3.2.0",
+    "dayjs": "^1.8.0",
     "eslint": "^4.9.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-plugin-flowtype": "^2.39.1",
@@ -52,9 +62,11 @@
     "jest": "24.9.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.13.1",
     "rimraf": "^2.6.3",
     "style-loader": "^1.0.0",
     "webpack": "^4.20.2",
