--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.5",
     "@material-ui/core": "^4.9.4",
+    "@rjsf/antd": "^2.0.0-alpha.6",
     "@rjsf/core": "^2.0.0-alpha.6",
     "@rjsf/material-ui": "^2.0.0-alpha.6",
     "ajv": "^6.7.0",
