--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,6 @@ nav:
   - Quickstart: quickstart.md
   - Usage:
     - JSON Schema: usage/schema.md
-    - uiSchema: usage/uiSchema.md
     - Widgets: usage/widgets.md
     - Themes: usage/themes.md
     - Validation: usage/validation.md
@@ -20,6 +19,7 @@ nav:
     - Other Internals: advanced-customization/internals.md
     - Contributing: contributing.md
   - API Reference:
+    - uiSchema: api-reference/uiSchema.md
     - "&lt;Form /&gt; props": api-reference/form-props.md
 
 markdown_extensions:
