--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -67,5 +67,8 @@
     "type": "git",
     "url": "git+https://github.com/cybertec-postgresql/rjsf-material-ui.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@fluentui/react": "^7.114.2"
+  }
 }
